Modifico para dar la posibilidad de compilar y correr sin CPLEX.