@@ -1,17 +1,10 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<!-- WARNING: Eclipse auto-generated file.
-              Any modifications will be overwritten.
-              To include a user specific buildfile here, simply create one in the same
-              directory with the processing instruction <?eclipse.ant.import?>
-              as the first entry and export the buildfile again. -->
+
 <project basedir="." default="build" name="Totem">
     <property environment="env"/>
-    <property name="ECLIPSE_HOME" value="../../eclipse"/>
-    <property name="workspace_loc:Totem" value="."/>
-    <property name="debuglevel" value="source,lines,vars"/>
     <property name="target" value="1.6"/>
     <property name="source" value="1.6"/>
-    <path id="Totem.classpath">
+    <path id="classpathfull">
         <pathelement location="bin"/>
         <pathelement location="lib/java/ant-contrib-1.0b3.jar"/>
         <pathelement location="lib/java/Brite_modified.jar"/>
@@ -46,48 +39,87 @@
         <pathelement location="lib/java/agape/agape.jar"/>
         <pathelement location="lib/java/jung2-201/collections-generic-4.01.jar"/>
         <pathelement location="lib/java/ejml-0.19.jar"/>
-        <pathelement location="lib/java/choco-solver-2.1.5.jar"/>
         <pathelement location="/usr/local/cplex122/cplex/lib/cplex.jar"/>
     </path>
-    <target name="init">
+	
+	<path id="classpath">
+        <pathelement location="bin"/>
+        <pathelement location="lib/java/ant-contrib-1.0b3.jar"/>
+        <pathelement location="lib/java/Brite_modified.jar"/>
+        <pathelement location="lib/java/catalina-ant.jar"/>
+        <pathelement location="lib/java/CBGP.jar"/>
+        <pathelement location="lib/java/colt.jar"/>
+        <pathelement location="lib/java/commons-collections-3.1.jar"/>
+        <pathelement location="lib/java/epsgraphics.jar"/>
+        <pathelement location="lib/java/jax-qname.jar"/>
+        <pathelement location="lib/java/jaxb-api.jar"/>
+        <pathelement location="lib/java/jaxb-impl.jar"/>
+        <pathelement location="lib/java/jaxb-libs.jar"/>
+        <pathelement location="lib/java/jaxb-xjc.jar"/>
+        <pathelement location="lib/java/jcommon-1.0.0.jar"/>
+        <pathelement location="lib/java/jfreechart-1.0.0.jar"/>
+        <pathelement location="lib/java/jgrapht-0.5.2.jar"/>
+        <pathelement location="lib/java/jrobin-1.5.2.jar"/>
+        <pathelement location="lib/java/junit.jar"/>
+        <pathelement location="lib/java/log4j-1.2.8.jar"/>
+        <pathelement location="lib/java/relaxngDatatype.jar"/>
+        <pathelement location="lib/java/xsdlib.jar"/>
+        <pathelement location="lib/java/agape/guava-r07.jar"/>
+        <pathelement location="lib/java/jung-1.7.6.jar"/>
+        <pathelement location="lib/java/jung2-201/jung-3d.jar"/>
+        <pathelement location="lib/java/jung2-201/jung-algorithms.jar"/>
+        <pathelement location="lib/java/jung2-201/jung-api.jar"/>
+        <pathelement location="lib/java/jung2-201/jung-graph-impl.jar"/>
+        <pathelement location="lib/java/jung2-201/jung-io.jar"/>
+        <pathelement location="lib/java/jung2-201/jung-jai.jar"/>
+        <pathelement location="lib/java/jung2-201/jung-visualization.jar"/>
+        <pathelement location="lib/java/agape/agape-dependencies.jar"/>
+        <pathelement location="lib/java/agape/agape.jar"/>
+        <pathelement location="lib/java/jung2-201/collections-generic-4.01.jar"/>
+        <pathelement location="lib/java/ejml-0.19.jar"/>
+	</path>
+    <target name="clean">
+        <delete dir="bin"/>
+    </target>
+    <target depends="clean" name="cleanfull"/>
+    <target name="initfull">
         <mkdir dir="bin"/>
+        <copy includeemptydirs="false" todir="bin/source">
+            <fileset dir="src" />
+        </copy>
         <copy includeemptydirs="false" todir="bin">
             <fileset dir="src">
                 <exclude name="**/*.java"/>
             </fileset>
         </copy>
     </target>
-    <target name="clean">
-        <delete dir="bin"/>
+    <target name="init">
+        <mkdir dir="bin"/>
+        <copy includeemptydirs="false" todir="bin/source">
+            <fileset dir="src">
+                <exclude name="uy/edu/fing/repository/rrloc/algorithms/optimal/*"/>
+            </fileset>
+        </copy>
+        <copy includeemptydirs="false" todir="bin">
+            <fileset dir="src">
+                <exclude name="**/*.java"/>
+            </fileset>
+        </copy>
     </target>
-    <target depends="clean" name="cleanall"/>
-    <target depends="build-subprojects,build-project" name="build"/>
-    <target name="build-subprojects"/>
-    <target depends="init" name="build-project">
+    <target depends="build-project-full" name="buildfull"/>
+    <target depends="initfull" name="build-project-full">
         <echo message="${ant.project.name}: ${ant.file}"/>
-        <javac debug="true" debuglevel="${debuglevel}" destdir="bin" includeantruntime="false" source="${source}" target="${target}">
-            <src path="src"/>
-            <classpath refid="Totem.classpath"/>
+        <javac debug="true" destdir="bin" includeantruntime="false" source="${source}" target="${target}">
+            <src path="bin/source"/>
+            <classpath refid="classpathfull"/>
         </javac>
     </target>
-    <target description="Build all projects which reference this project. Useful to propagate changes." name="build-refprojects"/>
-    <target description="copy Eclipse compiler jars to ant lib directory" name="init-eclipse-compiler">
-        <copy todir="${ant.library.dir}">
-            <fileset dir="${ECLIPSE_HOME}/plugins" includes="org.eclipse.jdt.core_*.jar"/>
-        </copy>
-        <unzip dest="${ant.library.dir}">
-            <patternset includes="jdtCompilerAdapter.jar"/>
-            <fileset dir="${ECLIPSE_HOME}/plugins" includes="org.eclipse.jdt.core_*.jar"/>
-        </unzip>
-    </target>
-    <target description="compile project with Eclipse compiler" name="build-eclipse-compiler">
-        <property name="build.compiler" value="org.eclipse.jdt.core.JDTCompilerAdapter"/>
-        <antcall target="build"/>
-    </target>
-    <target name="Totem">
-        <java classname="be.ac.ulg.montefiore.run.totem.core.Totem" failonerror="true" fork="yes">
-            <jvmarg line="-d32 -Xmx512m -Djava.ext.dirs=${workspace_loc:Totem}/lib/java -Djava.library.path=${workspace_loc:Totem}/lib"/>
-            <classpath refid="Totem.classpath"/>
-        </java>
+    <target depends="build-project" name="build"/>
+    <target depends="init" name="build-project">
+        <echo message="${ant.project.name}: ${ant.file}"/>
+        <javac debug="true" destdir="bin" includeantruntime="false" source="${source}" target="${target}">
+            <src path="bin/source"/>
+            <classpath refid="classpath"/>
+        </javac>
     </target>
 </project>
