@@ -1,14 +1,21 @@
 #!/bin/sh
 
+CPLEX_PATH_LIB=/usr/local/cplex122/cplex/lib/
+CPLEX_PATH_BIN_ARQ=/usr/local/cplex122/cplex/bin/x86_sles10_4.1/
+
+if [ ! -d "$CPLEX_PATH_LIB" -o ! -d "$CPLEX_PATH_BIN_ARQ" ]; then
+	CPLEX_PATH_LIB=""
+	CPLEX_PATH_BIN_ARQ=""
+fi
+
 TOTEM_HOMEDIR=`dirname $0`
 TOTEM_BIN=$TOTEM_HOMEDIR/bin
-LIBRARYPATH=$TOTEM_HOMEDIR/lib/:/usr/local/cplex122/cplex/bin/x86_sles10_4.1/
-EXTDIRS=$TOTEM_HOMEDIR/lib/java:$TOTEM_HOMEDIR/lib/java/agape:$TOTEM_HOMEDIR/lib/java/jung2-201:/usr/local/cplex122/cplex/lib/
+LIBRARYPATH=$TOTEM_HOMEDIR/lib/:$CPLEX_PATH_BIN_ARQ
+EXTDIRS=$TOTEM_HOMEDIR/lib/java:$TOTEM_HOMEDIR/lib/java/agape:$TOTEM_HOMEDIR/lib/java/jung2-201:$CPLEX_PATH_LIB
 
 TOTEM_MAIN="be.ac.ulg.montefiore.run.totem.core.Totem"
 
 JVMARGS="-d32 -Xmx512m"
-#JVMARGS="-verbose:jni -Xcheck:jni -Xmx512m"
 
 if [ -z "$JAVA_HOME" ]; then
     JAVA=`which java`
@@ -27,5 +34,4 @@ if [ ! -x "$JAVA" ]; then
 fi
 
 
-#echo "$JAVA $JVMARGS -cp "$TOTEM_BIN" -Djava.ext.dirs=$EXTDIRS -Djava.library.path=$LIBRARYPATH $TOTEM_MAIN $@"
 $JAVA $JVMARGS -cp "$TOTEM_BIN" -Djava.ext.dirs=$EXTDIRS -Djava.library.path=$LIBRARYPATH $TOTEM_MAIN $@
